# tetra-creative

./: .gitignore  CMakeLists.txt  LICENSE  firstTriangle
assets/shaders/: identity.frag  identity.vert  identity_offset.vert  lissajous.frag  lissajous.geom  lissajous.vert
dependencies/glm/glm/: glm_dummy
inc/: AssetRoot.h  SDL.hpp  SDLException.hpp  SDLWindow.hpp  SDLfwd.hpp
inc/gl/: Buffer.hpp  GLException.hpp  Shader.hpp  VAO.hpp
inc/sdl/: SDLWindow.hpp
lib/: CMakeLists.txt
lib/inc/: Assets.hpp
lib/inc/gl/: Buffer.hpp  GLException.hpp  Program.hpp  Shader.hpp
lib/inc/sdl/: GLContext.hpp  SDL.hpp  SDLEvents.hpp  SDLException.hpp  SDLWindow.hpp
lib/inc/tetra/: AdaptiveOrtho.hpp  EventStream.hpp  NDCMouse.hpp  TicTocClock.hpp
lib/inc/tetra/behavior/: Behavior.hpp  BehaviorList.hpp  Debug.hpp  Timing.hpp
lib/src/: Assets.cpp
lib/src/gl/: Buffer.cpp  GLException.cpp  Program.cpp  Shader.cpp  VAO.cpp
lib/src/sdl/: SDL.cpp  SDLException.cpp  SDLWindow.cpp
lib/src/tetra/: AdaptiveOrtho.cpp  EventStream.cpp  NDCMouse.cpp
lib/src/tetra/behavior/: Behavior.cpp  BehaviorList.cpp  Debug.cpp  Timing.cpp
metasrc/: AssetRoot.h.in
sketches/: actionlist.cpp  firstTriangle.cpp  lissajous.cpp  offsetTriangle.cpp
src/: GLContext.cpp  SDL.cpp  SDLException.cpp  SDLWindow.cpp  main.cpp
src/gl/: GLException.cpp  Program.cpp  Shader.cpp
src/sdl/: GLContext.cpp  SDL.cpp
